@@ -76,14 +76,14 @@ smrfactor_mass_user_enable=no     # Enable user-defined reference mass factor in
 smrfactor_mass_user=1.0E9         # Double precision user-defined reference mass factor in solution mass ratios
 smrfactor_mass_user_error=0.0     # Double precision user-defined reference mass factor in solution mass ratios standard uncertainty (0.0 = exact)
 # Boson mass combinations
-#smrfactor_mass_user=171.5666E9   # W+Z
+#smrfactor_mass_user=171.567E9    # W+Z
 #smrfactor_mass_user_error=1.4E7  # W+Z
-#smrfactor_mass_user=262.7542E9   # W+Z+Z
+#smrfactor_mass_user=262.75E9     # W+Z+Z
 #smrfactor_mass_user_error=1.6E7  # W+Z+Z
-#smrfactor_mass_user=205.559E9    # W+H
-#smrfactor_mass_user_error=1.7E8  # W+H
-#smrfactor_mass_user=296.7466E9   # W+H+Z
-#smrfactor_mass_user_error=1.7E8  # W+H+Z
+#smrfactor_mass_user=205.48E9     # W+H
+#smrfactor_mass_user_error=1.5E8  # W+H
+#smrfactor_mass_user=296.67E9     # W+H+Z
+#smrfactor_mass_user_error=1.5E8  # W+H+Z
 #
 # The following smrfactors are allowed to be part of the solution mass ratio for a term in (1-smr) and (1-smr-rmr) modes.  Otherwise they are not used
 # set _exp_up_max=0 and _exp_down_max=1 to disable a factor
@@ -173,8 +173,8 @@ ref_mz=91.1876E9                  # Z boson mass (pdg)
 ref_mz_error=0.0021E9             # Z boson mass standard uncertainty (pdg)
 ref_mw=80.379E9                   # W boson mass (pdg)
 ref_mw_error=0.012E9              # W boson mass standard uncertainty (pdg)
-ref_mh0=125.35E9                  # Higgs boson mass (https://cds.cern.ch/record/2691211/files/HIG-19-004-pas.pdf)
-ref_mh0_error=0.15E9              # Higgs boson mass standard uncertainty (https://cds.cern.ch/record/2691211/files/HIG-19-004-pas.pdf)
+ref_mh0=125.10E9                  # Higgs boson mass
+ref_mh0_error=0.14E9              # Higgs boson mass standard uncertainty
 ref_sin2w=0.22311                 # Weak mixing angle (derived from pdg mw/mz)
 ref_sin2w_error=0.00027           # Weak mixing angle standard uncertainty (derived from pdg mw/mz)
 ref_G=6.67430E-11                 # Gravitational constant (CODATA)
